--- a/transforms/index.html
+++ b/transforms/index.html
@@ -13,6 +13,7 @@
       <img src="./img//cloud.png" alt="A cloud image" class="cloud2" />
       <img src="./img//cloud.png" alt="A cloud image" class="cloud3" />
       <img src="./img//cloud.png" alt="A cloud image" class="cloud4" />
+      <img src="./img//cloud.png" alt="A cloud image" class="cloud5" />
     </main>
   </body>
 </html>
