transition property used along transform property to make a nice little animation

--- a/transitions/index.html
+++ b/transitions/index.html
@@ -10,10 +10,9 @@
   <body>
     <main class="container">
       <img src="./img//cloud.png" alt="A cloud image" class="cloud1" />
-      <img src="./img//cloud.png" alt="A cloud image" class="cloud2" />
-      <img src="./img//cloud.png" alt="A cloud image" class="cloud3" />
-      <img src="./img//cloud.png" alt="A cloud image" class="cloud4" />
-      <img src="./img//cloud.png" alt="A cloud image" class="cloud5" />
+      <div class="circle">
+        hover
+      </div>
     </main>
   </body>
 </html>
