--- a/keyframe/index.html
+++ b/keyframe/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
-  <title>Mario Kart Animations</title>
+  <title>emmeiwhite | Mario Animations</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="sky">
-    <img src="./img/cloud.png" alt="Cloud" class="cloud"/>
-    <img src="./img/cloud.png" alt="Cloud" class="cloud"/>
+    <img src="./img/cloud.png" alt="Cloud" class="cloud" />
+    <img src="./img/cloud.png" alt="Cloud" class="cloud" />
   </div>
   <div class="grass"></div>
   <div class="road">
